Fixed some interactive examples and equations in HTML format

--- a/InverseKinematics.ipynb
+++ b/InverseKinematics.ipynb
@@ -2589,7 +2589,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "code_folding": [],
+    "code_folding": [
+     0
+    ],
     "tags": [
      "remove_cell_html"
     ]
@@ -2644,7 +2646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "code_folding": [
      0
@@ -2666,23 +2668,21 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4afb3f061b6745d38aaa995b57e76e9a",
+       "model_id": "5a0d421528764ed2ac73f5b6df5dbdb6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "KlamptWidgetAdaptor(height=400, rpc={'type': 'multiple', 'calls': [{'up': {'y': 0.44113772676914204, 'z': -0.8…"
+       "KlamptWidgetAdaptor(height=400, rpc={'calls': [{'target': {'x': 0, 'y': 0, 'z': 0}, 'position': {'x': 0.270576…"
       ]
      },
-     "metadata": {
-      "tags": []
-     },
+     "metadata": {},
      "output_type": "display_data"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "08b282032baa4806958bb4a7971f99b5",
+       "model_id": "1664e9f719e74b13831723cd33cde043",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2690,14 +2690,12 @@
        "HBox(children=(VBox(children=(FloatSlider(value=0.0, description='x', max=2.0, min=-2.0, step=0.001), FloatSli…"
       ]
      },
-     "metadata": {
-      "tags": []
-     },
+     "metadata": {},
      "output_type": "display_data"
     }
    ],
    "source": [
-    "#Code for the interactive example (run me and the next code block!)\n",
+    "#Code for the interactive example (run me!)\n",
     "import time\n",
     "from klampt import *\n",
     "from klampt.math import so3,vectorops\n",
@@ -2766,8 +2764,8 @@
     "    return q0\n",
     "\n",
     "#called whenever configuration is edited\n",
-    "link0_vis_path = robot.link(0).getName()\n",
-    "link1_vis_path = robot.link(1).getName()\n",
+    "link0_vis_path = vis.getItemName(robot.link(0))\n",
+    "link1_vis_path = vis.getItemName(robot.link(1))\n",
     "def point_update_cb(point):\n",
     "    global L1,L2\n",
     "    N,solns = ik_2R_analytical(L1,L2,point[0],point[1])\n",
