--- a/Kinematics.ipynb
+++ b/Kinematics.ipynb
@@ -4082,7 +4082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "code_folding": [
      0
@@ -4095,12 +4095,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "61e8655c53b44a51ab15308db68f9817",
+       "model_id": "ca229cec055a49f0863c041ace7e72d1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "KlamptWidgetAdaptor(height=400, rpc={'type': 'multiple', 'calls': [{'target': {'z': 0, 'x': 0, 'y': 0}, 'near'…"
+       "KlamptWidgetAdaptor(height=400, rpc={'calls': [{'near': 0.1, 'type': 'set_camera', 'position': {'y': 6.7025634…"
       ]
      },
      "metadata": {},
@@ -4109,7 +4109,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "35f4523a58f0459186ecae980023cf80",
+       "model_id": "80dbe23a0cb14f53acc36bf71c2e1099",
        "version_major": 2,
        "version_minor": 0
       },
@@ -4174,7 +4174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "code_folding": [
      0
@@ -4187,12 +4187,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "196c6be6b60d491bb97a71977cfc042b",
+       "model_id": "334bdfdd68064190b6a4f93e1dd2fe69",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "KlamptWidgetAdaptor(height=400, rpc={'type': 'multiple', 'calls': [{'target': {'z': 0, 'x': 0, 'y': 0}, 'near'…"
+       "KlamptWidgetAdaptor(height=400, rpc={'calls': [{'near': 0.1, 'type': 'set_camera', 'position': {'y': 6.7025634…"
       ]
      },
      "metadata": {},
@@ -4201,7 +4201,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e93672f553f34d37b1a2d1c2c1b9ddbf",
+       "model_id": "0bab2b1d2f09456eb548fab40fff28fe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -4259,7 +4259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "code_folding": [
      0
@@ -4272,12 +4272,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "43250ce4c34d49e3a5024ac1aa335888",
+       "model_id": "779d3cf358fe4d17899561843089bfd8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "KlamptWidgetAdaptor(height=400, scene={'materials': [{'type': 'MeshPhongMaterial', 'emissive': 0, 'uuid': '836…"
+       "KlamptWidgetAdaptor(height=400, scene={'materials': [{'type': 'MeshPhongMaterial', 'emissive': 0, 'specular': …"
       ]
      },
      "metadata": {},
@@ -4286,7 +4286,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "528531b8620645ae876e385aef87e6b0",
+       "model_id": "64eea1f27ea84f1ea1c7c89e25a3038b",
        "version_major": 2,
        "version_minor": 0
       },
