--- a/WhatIsMotionPlanning.ipynb
+++ b/WhatIsMotionPlanning.ipynb
@@ -555,13 +555,21 @@
     "$$\n",
     "\n",
     "Letting the coefficients $C_i =(\\mathbf{a},\\mathbf{b},\\mathbf{c},\\mathbf{t})$, we have \n",
+    "\n",
     "$$ poly(C_i;u) = \\mathbf{a} + u \\mathbf{b} + u^2 \\mathbf{c} + u^3 \\mathbf{t} $$\n",
+    "\n",
     "$$ \\frac{d}{du} poly(C_i;u) = \\mathbf{b} + 2 u \\mathbf{c} + 3 u^2 \\mathbf{t} $$\n",
+    "\n",
     "so immediately, we see that $\\mathbf{a} = \\mathbf{m}_0$ and $\\mathbf{b} = \\mathbf{t}_0$.  We now need to solve for $\\mathbf{c}$ and $\\mathbf{t}$ such that the linear equations\n",
+    "\n",
     "$$\\mathbf{m}_1 = \\mathbf{m}_0 + \\mathbf{t}_0 + \\mathbf{c} + \\mathbf{t}$$\n",
+    "\n",
     "and\n",
+    "\n",
     "$$\\mathbf{t}_1 = \\mathbf{t}_0 + 2 \\mathbf{c} + 3 \\mathbf{t}$$\n",
+    "\n",
     "hold.  To do so we rearrange the above into the matrix equation\n",
+    "\n",
     "$$\\begin{bmatrix}\\mathbf{m}_1 - \\mathbf{m}_0 - \\mathbf{t}_0 \\\\\n",
     "\\mathbf{t}_1 - \\mathbf{t}_{0}\n",
     "\\end{bmatrix} =\n",
@@ -570,7 +578,9 @@
     "2 & 3\n",
     "\\end{bmatrix}\n",
     "\\begin{bmatrix} \\mathbf{c} \\\\ \\mathbf{t} \\end{bmatrix} $$\n",
+    "\n",
     "Which has the solution via 2x2 matrix inversion\n",
+    "\n",
     "$$\\begin{bmatrix} \\mathbf{c} \\\\ \\mathbf{t} \\end{bmatrix} = \n",
     "\\begin{bmatrix}\n",
     "1 & 1 \\\\\n",
@@ -586,6 +596,7 @@
     "\\begin{bmatrix}\\mathbf{m}_1 - \\mathbf{m}_0 - \\mathbf{t}_0 \\\\\n",
     "\\mathbf{t}_1 - \\mathbf{t}_{0}\n",
     "\\end{bmatrix} . $$\n",
+    "\n",
     "(Check that the inverse is correct by inspection.) In other words, $\\mathbf{c} = - 3\\mathbf{m}_0 + 3 \\mathbf{m}_1 - 2\\mathbf{t}_0 - \\mathbf{t}_1$ and $\\mathbf{t} =  2\\mathbf{m}_0 -2 \\mathbf{m}_1 + \\mathbf{t}_0 + \\mathbf{t}_1$.\n",
     "\n",
     "Another convenient way of expressing the segment is:\n",
@@ -602,7 +613,7 @@
    "cell_type": "markdown",
    "metadata": {
     "tags": [
-     "remove_code_html"
+     "remove_cell_html"
     ]
    },
    "source": [
