Added instructions for Colab users.

--- a/3DRotations.ipynb
+++ b/3DRotations.ipynb
@@ -1289,7 +1289,13 @@
    ],
    "source": [
     "#This code must be run from the RoboticSystemsBook folder\n",
-    "from IPython.display import display,Markdown\n",
+    "\n",
+    "# If you are running on Google Colab, uncomment the following code:\n",
+    "#\n",
+    "# %cd ~\n",
+    "# !git clone --depth 1 https://github.com/krishauser/RoboticSystemsBook\n",
+    "# %cd RoboticSystemsBook\n",
+    "\n",
     "from rsbook_code.assessment import quiz\n",
     "quiz.show(\"rotations\")"
    ]
@@ -1304,8 +1310,7 @@
    "source": [
     "## Interactive examples\n",
     "\n",
-    "The following interactive examples require Jupyter, Klamp't, and Klampt-jupyter-extension to be installed on your system.  Instructions can be found at\n",
-    "[https://github.com/krishauser/Klampt-jupyter-extension](https://github.com/krishauser/Klampt-jupyter-extension)."
+    "The following interactive examples require that you run this notebook via Binder or a local Jupyter Notebook installation.  Google Colab is not compatible. See [these instructions](Book.ipynb#Options-for-Working-with-Jupyter-Notebook) for more details."
    ]
   },
   {
@@ -1490,7 +1495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
