--- a/Geometry.ipynb
+++ b/Geometry.ipynb
@@ -4542,7 +4542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "code_folding": [
      0
@@ -4567,12 +4567,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "59b743c33d6146c19f23cef243fdf177",
+       "model_id": "814993e931cd44ddb82893d8c6462c83",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(VBox(children=(HTMLMath(value='Q1. Which of the following geometric representations would be mo…"
+       "VBox(children=(HTML(value='<style>\\n            .correct { background:#8f8;padding:10px 25px 10px 25px;width:4…"
       ]
      },
      "metadata": {},
@@ -4581,9 +4581,15 @@
    ],
    "source": [
     "#This code must be run from the RoboticSystemsBook folder\n",
-    "from IPython.display import display,Markdown\n",
+    "\n",
+    "# If you are running on Google Colab, uncomment the following code:\n",
+    "#\n",
+    "# %cd ~\n",
+    "# !git clone --depth 1 https://github.com/krishauser/RoboticSystemsBook\n",
+    "# %cd RoboticSystemsBook\n",
+    "\n",
     "from rsbook_code.assessment import quiz\n",
-    "quiz.show_geometry()"
+    "quiz.show('geometry')"
    ]
   },
   {
@@ -4610,7 +4616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
