--- a/InverseKinematics.ipynb
+++ b/InverseKinematics.ipynb
@@ -2626,7 +2626,13 @@
    ],
    "source": [
     "#This code must be run from the RoboticSystemsBook folder\n",
-    "from IPython.display import display,Markdown\n",
+    "\n",
+    "# If you are running on Google Colab, uncomment the following code:\n",
+    "#\n",
+    "# %cd ~\n",
+    "# !git clone --depth 1 https://github.com/krishauser/RoboticSystemsBook\n",
+    "# %cd RoboticSystemsBook\n",
+    "\n",
     "from rsbook_code.assessment import quiz\n",
     "quiz.show('inverse_kinematics')"
    ]
@@ -2641,12 +2647,19 @@
    "source": [
     "## Interactive examples\n",
     "\n",
+    "The following interactive examples require that you run this notebook via Binder or a local Jupyter Notebook installation.  Google Colab is not compatible. See [these instructions](Book.ipynb#Options-for-Working-with-Jupyter-Notebook) for more details."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Planar 2R manipulator IK"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "code_folding": [
      0
@@ -2668,12 +2681,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5a0d421528764ed2ac73f5b6df5dbdb6",
+       "model_id": "c5b6eaf6d4f247898c5a1895c454e5d1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "KlamptWidgetAdaptor(height=400, rpc={'calls': [{'target': {'x': 0, 'y': 0, 'z': 0}, 'position': {'x': 0.270576…"
+       "KlamptWidgetAdaptor(height=400, rpc={'type': 'multiple', 'calls': [{'near': 0.1, 'target': {'y': 0, 'x': 0, 'z…"
       ]
      },
      "metadata": {},
@@ -2682,7 +2695,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1664e9f719e74b13831723cd33cde043",
+       "model_id": "356d52d5fe0941579ea3ee38d80d535a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2787,18 +2800,103 @@
     "pt = [0,0,0]\n",
     "point_widget = ipyklampt.EditPoint(pt,[-2,-2,-1],[2,2,1],klampt_widget=vis.nativeWindow(),callback=point_update_cb)\n",
     "\n",
-    "controls = widgets.HBox([point_widget])\n",
+    "vis.show()\n",
+    "display(point_widget)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "o2NPk4vN0P1r"
+   },
+   "source": [
+    "### 6R manipulator IK"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "549cca796e464307ad9a0e5ecb09a824",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "KlamptWidgetAdaptor(height=400, rpc={'type': 'multiple', 'calls': [{'type': 'add_xform', 'name': 'edited_xform…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "451b4c9ef3674a89bed773c187cb2138",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(FloatSlider(value=6.283185307179586, description='roll', max=6.283185307179586, step=0.001), Fl…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Code for the interactive example (run me!)\n",
+    "import time\n",
+    "from klampt import *\n",
+    "from klampt.math import so3,se3,vectorops\n",
+    "from klampt.model import ik\n",
+    "import math\n",
+    "from IPython.display import HTML,clear_output\n",
+    "import ipywidgets as widgets\n",
+    "from klampt.vis import ipython as ipyklampt\n",
+    "\n",
+    "world = WorldModel()\n",
+    "world.readFile(\"data/tx90l.rob\")\n",
+    "robot = world.robot(0)\n",
+    "\n",
+    "ee_link_index = robot.numLinks()-1\n",
+    "ee_link = robot.link(ee_link_index)\n",
+    "ee_local = (0,0,0)  #end effector coordinates\n",
+    "vis.init(\"IPython\")\n",
+    "vis.createWindow()\n",
+    "vis.resizeWindow(400,400)\n",
+    "vis.add(\"world\",world)\n",
+    "\n",
+    "#called whenever configuration is edited\n",
+    "def point_update_cb(xform):\n",
+    "    R,t = xform\n",
+    "    obj = ik.objective(ee_link,R=R,t=t)\n",
+    "    res = ik.solve(obj)\n",
+    "    vis.clearText()\n",
+    "    if res:\n",
+    "        vis.add(\"IKstatus\",\"IK solved!\",position=(5,5))\n",
+    "    else:\n",
+    "        txt = ','.join('%.2f'%(v,) for v in ik.residual(obj))\n",
+    "        vis.add(\"IKstatus\",\"IK failed, residual %s\"%(txt,),position=(5,5))\n",
+    "    vis.update()\n",
+    "xform = ee_link.getTransform()\n",
+    "xform_widget = ipyklampt.EditTransform(xform,[-1.5,-1.5,0],[1.5,1.5,3],klampt_widget=vis.nativeWindow(),callback=point_update_cb)\n",
     "\n",
     "vis.show()\n",
-    "display(controls)"
+    "display(xform_widget)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "o2NPk4vN0P1r"
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -2823,7 +2921,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
