--- a/MotionPlanningHigherDimensions.ipynb
+++ b/MotionPlanningHigherDimensions.ipynb
@@ -1462,7 +1462,13 @@
    ],
    "source": [
     "#This code must be run from the RoboticSystemsBook folder\n",
-    "from IPython.display import display,Markdown\n",
+    "\n",
+    "# If you are running on Google Colab, uncomment the following code:\n",
+    "#\n",
+    "# %cd ~\n",
+    "# !git clone --depth 1 https://github.com/krishauser/RoboticSystemsBook\n",
+    "# %cd RoboticSystemsBook\n",
+    "\n",
     "from rsbook_code.assessment import quiz\n",
     "quiz.show(\"motion_planning_higher_dimensions\")"
    ]
@@ -1491,7 +1497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
