--- a/Book.ipynb
+++ b/Book.ipynb
@@ -118,9 +118,9 @@
     "The book comes in [HTML](https://motion.cs.illinois.edu/RoboticSystems/) and Jupyter Notebook formats, and running the full Jupyter Notebook provides the most complete experience, with inline quizzes and code examples that you can visualize and edit live in your browser.\n",
     "\n",
     "There are three routes to running the Jupyter notebooks:\n",
-    "- [Binder](https://mybinder.org)\n",
-    "- [Google Colab](https://colab.research.google.com)\n",
-    "- Local Jupyter installation"
+    "- [Binder](#Running-on-Binder)\n",
+    "- [Google Colab](#Running-on-Google-Colab)\n",
+    "- [Local Jupyter installation](#Jupyter-Notebook-installation-on-local-machine)"
    ]
   },
   {
@@ -145,7 +145,6 @@
     "*Binder cons*:\n",
     "\n",
     "- Relative slow boot time (10&ndash;20s).\n",
-    "- Equation numbering is broken.\n",
     "- Can't easily save / restore your work &ndash; you will need to manually Download or Save to Browser Storage."
    ]
   },
@@ -159,8 +158,7 @@
     "\n",
     "I am progressively updating the book to be compatible with Google Colab, and this is the second-easiest way to get started.  Just click on the following link:\n",
     "\n",
-    "https://colab.research.google.com/github/krishauser/RoboticSystemsBook/blob/master/Book.ipynb\n",
-    "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/krishauser/RoboticSystemsBook/blob/master/Book.ipynb )\n",
     "\n",
     "*Colab pros*:\n",
     "\n",
@@ -171,21 +169,21 @@
     "*Colab cons*:\n",
     "\n",
     "- Equations are not numbered and cross-references don't work. \n",
-    "- The Table of Contents feature only works with cells that start with a header. These are being updated slowly...\n",
-    "- Need to run extra code to enable Klamp't visualizations.\n",
+    "- Need to insert / run extra code cells to enable interactive quizzes and code.\n",
     "- Klamp't visualization windows are not interactive due to Colab incompatibility with custom IPython widgets.\n",
+    "- The Table of Contents feature only works with cells that start with a header. These are being updated slowly...\n",
     "\n",
     "*Colab installation*: \n",
     "\n",
     "No installation needed. \n",
     "\n",
-    "To run interactive quizzes and code, at the top of each notebook you will need to add a code cell containing the following code:\n",
+    "To run interactive quizzes and code, you will need to insert and run a code cell containing the following code:\n",
     "\n",
-    "```\n",
+    "```c++\n",
+    "%cd ~\n",
     "!git clone --depth 1 https://github.com/krishauser/RoboticSystemsBook\n",
     "%cd RoboticSystemsBook\n",
     "import rsbook_code\n",
-    "%cd ..\n",
     "!pip install klampt\n",
     "```\n",
     "\n",
@@ -211,8 +209,7 @@
     "\n",
     "*Jupyter cons*\n",
     "\n",
-    "- Need to install on your local machine.\n",
-    "- Need to fiddle with Jupyter notebook extensions to get everything to work properly.\n",
+    "- Need to install on your local machine.  Possible compability issues with other Python installs, e.g., Anaconda.\n",
     "\n",
     "*Jupyter Installation*:\n",
     "\n",
@@ -282,7 +279,7 @@
     "Known issues\n",
     "============\n",
     "\n",
-    "Jupyter Notebook LaTeX rendering uses MathJAX inside Markdown, which occasionally has trouble rendering complex equations.  If you see stray code like `= \\begin{equation}` etc, this is a [known rendering problem](https://github.com/jupyter/notebook/issues/2865) with multiple matrices."
+    "Jupyter Notebook LaTeX rendering uses MathJAX inside Markdown, which occasionally has trouble rendering complex equations.  If you see stray code like `= \\begin{equation}` etc, this is a [known rendering problem](https://github.com/jupyter/notebook/issues/2865) with multiple matrices.  It seems like this problem is more prevalent in static HTML and Colab; try opening the book in a native Jupyter Notebook or on Binder if these rendering issues prevent you from understanding the equation."
    ]
   },
   {
@@ -314,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
