--- a/Kinematics.ipynb
+++ b/Kinematics.ipynb
@@ -4009,7 +4009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "code_folding": [
      0
@@ -4034,7 +4034,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc9309273f5241b2a8b7e2796168b65f",
+       "model_id": "6bab0bb3bdac49db9ff006aa5a0ac216",
        "version_major": 2,
        "version_minor": 0
       },
@@ -4048,7 +4048,13 @@
    ],
    "source": [
     "#This code must be run from the RoboticSystemsBook folder\n",
-    "from IPython.display import display,Markdown\n",
+    "\n",
+    "# If you are running on Google Colab, uncomment the following code:\n",
+    "#\n",
+    "# %cd ~\n",
+    "# !git clone --depth 1 https://github.com/krishauser/RoboticSystemsBook\n",
+    "# %cd RoboticSystemsBook\n",
+    "\n",
     "from rsbook_code.assessment import quiz\n",
     "quiz.show('forward_kinematics')"
    ]
@@ -4357,7 +4363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
