Fixed text vis problem

--- a/InverseKinematics.ipynb
+++ b/InverseKinematics.ipynb
@@ -2815,7 +2815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "code_folding": [
      0
@@ -2825,7 +2825,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "549cca796e464307ad9a0e5ecb09a824",
+       "model_id": "08b79ffa8d1e4dfa99e431de34eb9af1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2839,7 +2839,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "451b4c9ef3674a89bed773c187cb2138",
+       "model_id": "c1c827d1569f497981940a657cfe5088",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2881,10 +2881,10 @@
     "    res = ik.solve(obj)\n",
     "    vis.clearText()\n",
     "    if res:\n",
-    "        vis.add(\"IKstatus\",\"IK solved!\",position=(5,5))\n",
+    "        vis.addText(\"IKstatus\",\"IK solved!\",position=(5,5))\n",
     "    else:\n",
     "        txt = ','.join('%.2f'%(v,) for v in ik.residual(obj))\n",
-    "        vis.add(\"IKstatus\",\"IK failed, residual %s\"%(txt,),position=(5,5))\n",
+    "        vis.addText(\"IKstatus\",\"IK failed, residual %s\"%(txt,),position=(5,5))\n",
     "    vis.update()\n",
     "xform = ee_link.getTransform()\n",
     "xform_widget = ipyklampt.EditTransform(xform,[-1.5,-1.5,0],[1.5,1.5,3],klampt_widget=vis.nativeWindow(),callback=point_update_cb)\n",
