Removed latex env settings

--- a/Book.ipynb
+++ b/Book.ipynb
@@ -45,7 +45,7 @@
     "  * [Chapter 9. Motion planning in simple geometric spaces](GeometricMotionPlanning.ipynb) \n",
     "  * [Chapter 10. Motion planning in higher dimensions](MotionPlanningHigherDimensions.ipynb) **text complete, figures 80% complete**\n",
     "  * [Chapter 11. Planning with dynamics and uncertainty](PlanningWithDynamicsAndUncertainty.ipynb) **text 95% complete, figures 70% complete**\n",
-    "  * [Chapter 12. Advanced topics in planning](AdvancedTopicsInPlanning.ipynb) **incomplete**\n",
+    "  * [Chapter 12. Advanced topics in planning](AdvancedTopicsInPlanning.ipynb) **15% complete**\n",
     "\n",
     "* Section IV. Dynamics and Control\n",
     "\n",
