--- a/CoordinateTransformations.ipynb
+++ b/CoordinateTransformations.ipynb
@@ -1372,9 +1372,9 @@
    "version": "3.5.2"
   },
   "latex_envs": {
-   "LaTeX_envs_menu_present": true,
+   "LaTeX_envs_menu_present": false,
    "autoclose": false,
-   "autocomplete": true,
+   "autocomplete": false,
    "bibliofile": "biblio.bib",
    "cite_by": "apalike",
    "current_citInitial": 1,
@@ -1385,7 +1385,7 @@
     "itemize": "Ctrl-I"
    },
    "labels_anchors": false,
-   "latex_user_defs": true,
+   "latex_user_defs": false,
    "report_style_numbering": false,
    "user_envs_cfg": false
   },
@@ -1405,7 +1405,7 @@
     "width": "335.188px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
