--- a/Geometry.ipynb
+++ b/Geometry.ipynb
@@ -140,10 +140,11 @@
     "    from $\\partial G$.\n",
     "    \n",
     "************\n",
+    "<a name=\"fig:Geometries\"></a>\n",
     "\n",
     "![fig:Geometries](figures/modeling/geometries.png)\n",
     "\n",
-    "<div class=\"figcaption\"><a name=\"fig:Geometries\">Figure 1</a>.\n",
+    "<div class=\"figcaption\"><b>Figure 1</b>.\n",
     "The four main classes of geometry representations: (a) geometric primitives, in this case a box with given position, orientation, and dimensions, (b) surface representations, in this case a triangle mesh, (c) volumetric representations, here showing a cutaway view, and (d) point-based representations.</div>\n",
     "\n",
     "************\n",
@@ -227,7 +228,8 @@
     "\n",
     "\n",
     "\n",
-    "************"
+    "************\n",
+    "<a name=\"fig:Cube\"></a>"
    ]
   },
   {
@@ -311,7 +313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"figcaption\"><a name=\"fig:Cube\">Figure 2</a>.\n",
+    "<div class=\"figcaption\"><b>Figure 2</b>.\n",
     "A cube is represented by an indexed triangle mesh, given by 8 vertices and 12 triangles.</div>\n",
     "\n",
     "************\n",
@@ -3329,10 +3331,11 @@
     "Some 2D examples are illustrated in [Fig. 3](#fig:Volumetric). \n",
     "\n",
     "************\n",
+    "<a name=\"fig:Volumetric\"></a>\n",
     "\n",
     "![fig:Volumetric](figures/modeling/volumetric.svg)\n",
     "\n",
-    "<div class=\"figcaption\"><a name=\"fig:Volumetric\">Figure 3</a>.\n",
+    "<div class=\"figcaption\"><b>Figure 3</b>.\n",
     "Volumetric data can be intrepreted and represented in various ways.  Three popular interpretations &mdash; occupancy grids, SDFs and TSDFs &mdash; can be represented as dense, hierarchical, or sparse grids.  Examples are drawn in 2D.</div>\n",
     "\n",
     "************\n",
@@ -3397,7 +3400,8 @@
     "and orientation in space is required to correlate the 2D image to 3D\n",
     "points in a global reference frame.\n",
     "\n",
-    "************"
+    "************\n",
+    "<a name=\"fig:RGBD\"></a>"
    ]
   },
   {
@@ -3462,7 +3466,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"figcaption\"><a name=\"fig:RGBD\">Figure 4</a>.\n",
+    "<div class=\"figcaption\"><b>Figure 4</b>.\n",
     "    A color and depth image captured by an RGB-D camera, from the Cornell RGBD Dataset. The corresponding point cloud can be seen in <a href=\"#Point-cloud-visualization\">Section 4.3</a>.</div>\n",
     "\n",
     "************\n",
@@ -3610,10 +3614,11 @@
     "the point is inside; otherwise it is outside. \n",
     "\n",
     "************\n",
+    "<a name=\"fig:InsideOutside\"></a>\n",
     "\n",
     "![fig:InsideOutside](figures/modeling/inside_outside.svg)\n",
     "\n",
-    "<div class=\"figcaption\"><a name=\"fig:InsideOutside\">Figure 5</a>.\n",
+    "<div class=\"figcaption\"><b>Figure 5</b>.\n",
     "Left: Inside-outside testing for a point in an arbitrary surface can (normally) be determined by\n",
     "counting the number of times a ray, eminating from the point, intersects the surface. If this count is odd, the point is inside, while if it is even, the point is outside.  Right: special care must be taken at corner cases, such as when multiple surface primitives intersect the ray, or when the surface is tangent to the ray.</div>\n",
     "\n",
@@ -3679,10 +3684,11 @@
     "if $a \\in [c,d]$, $b \\in [c,d]$, $c \\in [a,b]$, or $d \\in [a,b]$.\n",
     "\n",
     "************\n",
-    "\n",
+    "<a name=\"fig:Collisions\"></a>\n",
+    "    \n",
     "![fig:Collisions](figures/modeling/primitive_collisions.svg)\n",
     "\n",
-    "<div class=\"figcaption\"><a name=\"fig:Collisions\">Figure 6</a>.\n",
+    "<div class=\"figcaption\"><b>Figure 6</b>.\n",
     "Primitive collision detection, showing (a) sphere vs sphere, (b) sphere vs line segment, with the closest point on the segment's supporting line indicated with a red circle, (c) line segment vs line segment, with the intersection of supporting lines indicated with a red circle, and (d) AABB vs AABB, showing overlap in one dimension but not the other. </div>\n",
     "\n",
     "************"
@@ -3704,9 +3710,10 @@
     "\n",
     "\n",
     "*************\n",
+    "<a name=\"fig:separating_plane\"></a>\n",
     "![fig:separating_plane](figures/modeling/separating_plane.png)\n",
     "\n",
-    "<div class=\"figcaption\"><a name=\"fig:separating_plane\">Figure 7</a>.\n",
+    "<div class=\"figcaption\"><b>Figure 7</b>.\n",
     "    Illustrating the separation principle for 2D objects (left) and 3D objects (right).\n",
     "    </div>\n",
     "\n",
@@ -3814,10 +3821,11 @@
     "is done.\n",
     "\n",
     "************\n",
-    "\n",
+    "<a name=\"fig:GJK\">\n",
+    "    \n",
     "![fig:GJK](figures/modeling/gjk.svg)\n",
     "\n",
-    "<div class=\"figcaption\"><a name=\"fig:GJK\">Figure 8</a>. Illustrating steps of the GJK algorithm. The current points are moved walked incrementally toward one another, respecting the constraints of the currently active feature. The active features for each point are highlighted in blue.\n",
+    "<div class=\"figcaption\"><b>Figure 8</b>. Illustrating steps of the GJK algorithm. The current points are moved walked incrementally toward one another, respecting the constraints of the currently active feature. The active features for each point are highlighted in blue.\n",
     "</div>\n",
     "\n",
     "************\n",
@@ -3873,9 +3881,10 @@
     "given model and then reused during collision detection.\n",
     "\n",
     "*************\n",
+    "<a name=\"fig:bounding_volume_hierarchy\"></a>\n",
     "![fig:bounding_volume_hierarchy](figures/modeling/bounding_volume_hierarchy.svg)\n",
     "\n",
-    "<div class=\"figcaption\"><a name=\"fig:bounding_volume_hierarchy\">Figure 9</a>.\n",
+    "<div class=\"figcaption\"><b>Figure 9</b>.\n",
     "    A bounding volume hierarchy for a 2D W-shaped object, with circles as bounding volumes.  The leaf nodes contain individual line segments.\n",
     "    </div>\n",
     "\n",
@@ -4024,10 +4033,10 @@
     "interacting with agents within some \"proximity radius\".\n",
     "\n",
     "*************\n",
-    "\n",
+    "<a name=\"fig:broadphase\"></a>\n",
     "![fig:broadphase](figures/modeling/broadphase.svg)\n",
     "\n",
-    "<div class=\"figcaption\"><a name=\"fig:broadphase\">Figure 10</a>. \n",
+    "<div class=\"figcaption\"><b>Figure 10</b>. \n",
     "    Broad phase collision detection / proximity for crowds (disks) with a \"proximity radius\" (dotted lines).  Left:  Yellow objects have sufficiently close proximity so that the proximity radius of object A overlaps the disk of object B. Red objects collide.  Right: a grid data structure can be constructed so that an object's disk is added to each grid cells that the disk overlaps (shaded grey). The cells overlapped by a query proximity disk (bold) are highlighted in blue, and in this case only three disks, excluding the query object, need checking for collision.\n",
     "    </div>\n",
     "\n",
@@ -4049,12 +4058,12 @@
     "is typical in the URDF files used in ROS (<a href=\"#fig:vis_coll_geometry\">Fig. 11</a>).\n",
     "\n",
     "*************\n",
-    "\n",
+    "<a name=\"fig:vis_coll_geometry\"></a>\n",
     "| (a) High-resolution visualization geometry | (b) Lower-resolution collision geometry\n",
     "|---------------------------------------------------------------|--------------------------------------------------------|\n",
     "|![fig:hubo_vis](figures/modeling/hubo_visualization_geometry.png) | ![fig:hubo_col](figures/modeling/hubo_collision_geometry.png) |\n",
     "\n",
-    "<div class=\"figcaption\"><a name=\"fig:vis_coll_geometry\">Figure 11</a>. \n",
+    "<div class=\"figcaption\"><b>Figure 11</b>. \n",
     "    Visualization geometry for robots may be stored separately from the collision detection geometry, and may contain more details to improve the quality of visualization.\n",
     "    </div>\n",
     "\n",
@@ -4134,12 +4143,13 @@
     "view (<a href=\"#fig:point_cloud\">Fig. 12</a>). \n",
     "\n",
     "*************\n",
+    "<a name=\"fig:point_cloud\"></a>\n",
     "\n",
     "| (a) A point cloud, from a similar vantage point to the camera | (b) A close up of the desk, from another vantage point|\n",
     "|---------------------------------------------------------------|--------------------------------------------------------|\n",
     "|![fig:point_cloud](figures/modeling/point_cloud.png) | ![fig:point_cloud2](figures/modeling/point_cloud2.png) |\n",
     "\n",
-    "<div class=\"figcaption\"><a name=\"fig:point_cloud\">Figure 12</a>. \n",
+    "<div class=\"figcaption\"><b>Figure 12</b>. \n",
     "    A point cloud of an office scene from an RGB-D camera, from the Cornell RGBD Dataset. Away from the original camera's vantage point, the data is difficult to interpret.\n",
     "    </div>\n",
     "\n",
