--- a/MotionPlanningHigherDimensions.ipynb
+++ b/MotionPlanningHigherDimensions.ipynb
@@ -1507,7 +1507,7 @@
     "itemize": "Ctrl-I"
    },
    "labels_anchors": false,
-   "latex_user_defs": true,
+   "latex_user_defs": false,
    "report_style_numbering": false,
    "user_envs_cfg": false
   },
