--- a/PlanningWithDynamicsAndUncertainty.ipynb
+++ b/PlanningWithDynamicsAndUncertainty.ipynb
@@ -1723,7 +1723,7 @@
    "version": "3.5.2"
   },
   "latex_envs": {
-   "LaTeX_envs_menu_present": true,
+   "LaTeX_envs_menu_present": false,
    "autoclose": false,
    "autocomplete": false,
    "bibliofile": "biblio.bib",
@@ -1736,7 +1736,7 @@
     "itemize": "Ctrl-I"
    },
    "labels_anchors": false,
-   "latex_user_defs": true,
+   "latex_user_defs": false,
    "report_style_numbering": false,
    "user_envs_cfg": false
   },
