--- a/InverseKinematics.ipynb
+++ b/InverseKinematics.ipynb
@@ -2826,9 +2826,9 @@
    "version": "3.5.2"
   },
   "latex_envs": {
-   "LaTeX_envs_menu_present": true,
+   "LaTeX_envs_menu_present": false,
    "autoclose": false,
-   "autocomplete": true,
+   "autocomplete": false,
    "bibliofile": "biblio.bib",
    "cite_by": "apalike",
    "current_citInitial": 1,
@@ -2839,7 +2839,7 @@
     "itemize": "Ctrl-I"
    },
    "labels_anchors": false,
-   "latex_user_defs": true,
+   "latex_user_defs": false,
    "report_style_numbering": false,
    "user_envs_cfg": false
   },
