--- a/Kinematics.ipynb
+++ b/Kinematics.ipynb
@@ -4360,9 +4360,9 @@
    "version": "3.5.2"
   },
   "latex_envs": {
-   "LaTeX_envs_menu_present": true,
+   "LaTeX_envs_menu_present": false,
    "autoclose": false,
-   "autocomplete": true,
+   "autocomplete": false,
    "bibliofile": "biblio.bib",
    "cite_by": "apalike",
    "current_citInitial": 1,
@@ -4373,7 +4373,7 @@
     "itemize": "Ctrl-I"
    },
    "labels_anchors": false,
-   "latex_user_defs": true,
+   "latex_user_defs": false,
    "report_style_numbering": false,
    "user_envs_cfg": false
   },
@@ -4393,7 +4393,7 @@
     "width": "307.188px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
