Algorithms now bolded, aren't in link anchor

--- a/GeometricMotionPlanning.ipynb
+++ b/GeometricMotionPlanning.ipynb
@@ -63,7 +63,8 @@
     "The first method we will study is called Bug 1.  Unlike the case of a maze, in planning we know which direction we would need to take to reach the goal.  So, Bug 1 proceeds as follows:\n",
     "\n",
     "*************\n",
-    "<a name=\"alg:Bug1\">**Algorithm Bug 1**</a>\n",
+    "<a name=\"alg:Bug1\"></a>\n",
+    "**Algorithm Bug 1**\n",
     "\n",
     "1. Move in a straight line path toward $G$.\n",
     "\n",
@@ -91,7 +92,8 @@
     "The second method is called Bug 2, and is a little more complex.  Here, we shall add some memory to the robot.\n",
     "\n",
     "*************\n",
-    "<a name=\"alg:Bug2\">**Algorithm Bug 2**</a>\n",
+    "<a name=\"alg:Bug2\"></a>\n",
+    "**Algorithm Bug 2**\n",
     "1. Move in a straight line path toward $G$. \n",
     "\n",
     "2. If the robot reaches $G$, we are done.  \n",
@@ -107,9 +109,10 @@
     "\n",
     "*************\n",
     "\n",
+    "<a name=\"fig:Bug2\"></a>\n",
     "![fig:Bug2](figures/planning/bug2.svg)\n",
     "\n",
-    "<div class=\"figcaption\"><a name=\"fig:Bug2\">Figure 2</a>.\n",
+    "<div class=\"figcaption\">Figure 2.\n",
     "    The Bug 2 algorithm remembers the line from the start to the\n",
     "goal, and circumnavigates an obstacle until it meets the line again at a\n",
     "closer point to the goal.\n",
@@ -122,9 +125,10 @@
     "\n",
     "*************\n",
     "\n",
+    "<a name=\"fig:Bugtrap\"></a>\n",
     "![fig:Bugtrap](figures/planning/bugtraps.svg)\n",
     "\n",
-    "<div class=\"figcaption\"><a name=\"fig:Bugtrap\">Figure 3</a>.\n",
+    "<div class=\"figcaption\">Figure 3.\n",
     "    A \"bugtrap\" environment designed so that Bug 1 falls into an infinite\n",
     "loop, while Bug 2\n",
     "succeeds.\n",
@@ -283,7 +287,8 @@
     "pass directly through obstacle corners.  Pseudocode for the basic visibility graph method is given below.\n",
     "\n",
     "*************\n",
-    "<a name=\"alg:VisibilityGraph\">**Algorithm Visibility-Graph**</a>\n",
+    "<a name=\"alg:VisibilityGraph\"></a>\n",
+    "**Algorithm Visibility-Graph**\n",
     "\n",
     "1. Let $V \\gets \\{ s, g \\}$ and all obstacle vertices.\n",
     "2. $E \\gets \\{ \\}$.\n",
@@ -1057,7 +1062,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.5.2"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
