--- a/MotionPlanningHigherDimensions.ipynb
+++ b/MotionPlanningHigherDimensions.ipynb
@@ -288,7 +288,8 @@
     "\n",
     "****************\n",
     "\n",
-    "<a name=\"alg:PRM\">Algorithm Basic-PRM(s,g,N)</a>\n",
+    "<a name=\"alg:PRM\"></a>\n",
+    "**Algorithm Basic-PRM(s,g,N)**\n",
     "1. $V \\gets \\{ s, g \\}$.\n",
     "2. $E \\gets \\{ \\}$.\n",
     "3. **for** $i=1,\\ldots,N$ **do**\n",
@@ -378,7 +379,8 @@
     "\n",
     "****************\n",
     "\n",
-    "<a name=\"alg:PRM\">Algorithm Incremental-PRM(s,g,T)</a>\n",
+    "<a name=\"alg:PRM\"></a>\n",
+    "**Algorithm Incremental-PRM**(s,g,T)\n",
     "1. $V \\gets \\{ s, g \\}$.\n",
     "2. $E \\gets \\{ \\}$.\n",
     "3. $CC[s] \\gets \\{s\\}$.\n",
@@ -553,7 +555,8 @@
     "start to the goal.\n",
     "\n",
     "********************\n",
-    "<a name=\"alg:RRTConnect\">Algorithm RRT-Connect</a>\n",
+    "<a name=\"alg:RRTConnect\"></a>\n",
+    "**Algorithm RRT-Connect**\n",
     "1. $T_s \\gets \\{ s \\}$.\n",
     "* $T_g \\gets \\{ g \\}$.\n",
     "* **for** $i=1,...,N$ **do**\n",
@@ -568,7 +571,8 @@
     "***********************\n",
     "\n",
     "********************\n",
-    "<a name=\"alg:ExtendTree\">Algorithm Extend-Tree$(T,q_{rand},\\delta)$</a>\n",
+    "<a name=\"alg:ExtendTree\"></a>\n",
+    "**Algorithm Extend-Tree**$(T,q_{rand},\\delta)$\n",
     "1. $q_{near} \\gets Nearest(T,q_{rand})$\n",
     "2. $q \\gets q_{near} + \\min{1,\\frac{\\delta}{d(q_{rand},q_{near})}}(q_{rand}-q_{near})$\n",
     "3. **if** Visible$(q_{near},q)$ **then**\n",
@@ -799,7 +803,8 @@
     "3. Extend-Tree sets $c(q) = c(q_{near}) + d(q_{near},q)$, and returns $nil$ if the tree could not be successfully extended.\n",
     "\n",
     "********************\n",
-    "<a name=\"alg:RRTStar\">Algorithm RRT*</a>\n",
+    "<a name=\"alg:RRTStar\"></a>\n",
+    "**Algorithm RRT***\n",
     "1. $T \\gets \\{ s \\}$..\n",
     "* **for** $i=1,...,N$ **do**\n",
     "* &nbsp;&nbsp;&nbsp;$q_{rand} \\gets Sample()$\n",
@@ -813,7 +818,8 @@
     "***********************\n",
     "\n",
     "********************\n",
-    "<a name=\"alg:RRTStarRewire\">Algorithm Rewire$(T,q_{new},n)$</a>\n",
+    "<a name=\"alg:RRTStarRewire\"></a>\n",
+    "**Algorithm Rewire**$(T,q_{new},n)$\n",
     "1. Neighbors $\\gets$ Set of $k^\\star(n)$-nearest neighbors in $T$, or points in $R^\\star(n)$-neighborhood.\n",
     "* **for** $q\\in$Neighbors sorted by increasing $c(q)$ **do**\n",
     "* &nbsp;&nbsp;&nbsp;**if** $c(q_{new}) + d(q_{new},q) < c(q)$ **then** &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style=\"color:green;\">(optimal path to $q$ passes through $q_{new}$)</span>\n",
@@ -894,7 +900,8 @@
     "Another issue is the order in which the configurations are checked.  In the worst case, the edge is feasible, and all configurations must be checked for feasibility.  However, if the edge is infeasible, then we can save time by finding an infeasible configuration quickly.  Let us suppose that both $a$ and $b$ are feasible.  Then, in the absence of additional information, the point that is most likely to lead to a collision is the midpoint $(a+b)/2$.  This intuition gives a recursive implementation that is effective in practice:\n",
     "\n",
     "********************\n",
-    "<a name=\"alg:Visible-Recurse\">Algorithm Visible-Recurse($a,b,\\epsilon$)</a>\n",
+    "<a name=\"alg:Visible-Recurse\"></a>\n",
+    "**Algorithm Visible-Recurse**($a,b,\\epsilon$)\n",
     "1. If this is the first recursive call, check $a$ and $b$ for collision.  Return false if either $\\neg Feasible(a)$ or $\\neg Feasible(b)$.\n",
     "2. If $d(a,b) \\leq \\epsilon$ return true.\n",
     "3. $m \\gets (a+b)/2$\n",
@@ -919,7 +926,8 @@
     "Although this approximate technique is by far the most widely used in practice, _exact_ dynamic collision checking methods are also available.  These methods are based on similar recursions, but use additional information about the clearance of a configuration.  Recall that the clearance $c(q)$ of a configuration is the distance in C-space to the nearest C-obstacle.  If we can show that $d(a,b) \\leq c(a)+c(b)$, then we can be certain that $\\overline{ab}$ is collision free ([Figure 8.b](#fig:dynamic-cc)).  This is because the balls centered at $a$ and $b$ with radii $c(a)$ and $c(b)$, overlap, are in free space, and contain $\\overline{ab}$ in their union.  (In most cases, however, we do not have access to an exact clearance function, but this reasoning still works when $c(q)$ is any lower bound on clearance.)  This gives the following exact algorithm:\n",
     "\n",
     "********************\n",
-    "<a name=\"alg:Visible-Exact1\">Algorithm Visible-Exact1($a,b$)</a>\n",
+    "<a name=\"alg:Visible-Exact1\"></a>\n",
+    "**Algorithm Visible-Exact1**($a,b$)\n",
     "1. If this is the first recursive call, check $a$ and $b$ for collision.  Return false if either $\\neg Feasible(a)$ or $\\neg Feasible(b)$.\n",
     "2. If $d(a,b) \\leq c(a) + c(b)$ return true.\n",
     "3. $m \\gets (a+b)/2$\n",
@@ -936,7 +944,8 @@
     "The following algorithm uses this bound to perform exact collision detection.\n",
     "\n",
     "********************\n",
-    "<a name=\"alg:Visible-Exact2\">Algorithm Visible-Exact2($a,b$)</a>\n",
+    "<a name=\"alg:Visible-Exact2\"></a>\n",
+    "**Algorithm Visible-Exact2**($a,b$)\n",
     "1. If this is the first recursive call, check $a$ and $b$ for collision.  Return false if either $\\neg Feasible(a)$ or $\\neg Feasible(b)$.\n",
     "2. If $\\eta_i(a,b) \\leq c_i(a) + c_i(b)$ for all C-obstacles $i=1,\\ldots,N$, return true.\n",
     "3. $m \\gets (a+b)/2$\n",
@@ -975,7 +984,8 @@
     "We will describe how to query for the closest point (NN), with the kNN and near queries implemented similarly. We traverse the tree in a branch-and-bound manner similar to the [bounding volume hierarchy](Geometry.ipynb#Bounding-volume-hierarchies) approach.  Let's assume the Euclidean distance is used.  We maintain a closest point $p_{close}$, initialized by picking a point from $P$ at random.  We proceed examining nodes $N$ recursively starting from $N=root(T_{kd})$. Psuedocode is below:\n",
     "\n",
     "********************\n",
-    "<a name=\"alg:KDTreeNN\">Algorithm KDTree-NN-recurse($q,N,p_{close}$)</a>\n",
+    "<a name=\"alg:KDTreeNN\"></a>\n",
+    "**Algorithm KDTree-NN-recurse**($q,N,p_{close}$)\n",
     "1. **if** $N$ is a leaf node, **then**\n",
     "1. &nbsp;&nbsp;&nbsp;Let `pts` be the points contained in $N$. \n",
     "1. &nbsp;&nbsp;&nbsp;Let $p$ be the closest point in `pts` to $q$.\n",
@@ -1497,7 +1507,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.5.2"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
